c4prj2_input/grade.txt
Grading at Wed Dec 25 15:28:36 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:12:9: error: implicit declaration of function ‘isspace’ [-Werror=implicit-function-declaration]
     if (isspace(str[i])) {
         ^
input.c:15:26: error: implicit declaration of function ‘isdigit’ [-Werror=implicit-function-declaration]
     if (str[i] == '?' && isdigit(str[i + 1]) != 0) {
                          ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
